--- a/index.html
+++ b/index.html
@@ -3,12 +3,30 @@
 <head>
   <meta charset="UTF-8">
   <title>Reddit with Angular</title>
-  <link rel="stylesheet" href="style.css">
   <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-  
+  <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+
+  <div ng-include src="'./partials/header.html'"></div>
+
+  <div ng-controller="postController">
+
+    <div class="col-md-10 col-md-offset-1" ng-repeat="post in posts">
+      <div class="jumbotron postSection">
+        <img ng-src="{{post.url}}">
+        <div class="postContent">
+          <h2>{{post.title}}</h2>
+          <hr>
+          <p>{{post.content}}</p>
+          <p>more</p>                              
+        </div>
+      </div>
+    </div>  
+
+  </div>
+
   <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.4/angular.min.js"></script>
