--- a/index.html
+++ b/index.html
@@ -9,9 +9,30 @@
 </head>
 <body>
 
-  <div ng-include src="'./partials/header.html'"></div>
-
   <div ng-controller="postController">
+
+    <div ng-include src="'./partials/header.html'"></div>
+
+    <div class="col-md-4 col-md-offset-4" ng-show="view.showform">
+      <form novalidate ng-submit="addPost()">
+        <div class="form-group">
+          <label for=""></label>
+          <input type="text" class="form-control">
+        </div>
+        <div class="form-group">
+          <label for=""></label>
+          <input type="text" class="form-control">
+        </div>
+        <div class="form-group">
+          <label for=""></label>
+          <input type="text" class="form-control">
+        </div>
+        <div class="form-group">
+          <label for=""></label>
+          <input type="text" class="form-control">
+        </div>         
+      </form>
+    </div>
 
     <div class="col-md-10 col-md-offset-1" ng-repeat="post in posts">
       <div class="jumbotron postSection">
