--- a/index.html
+++ b/index.html
@@ -10,42 +10,9 @@
 <body>
 
   <div ng-controller="postController">
-
     <div ng-include src="'./partials/header.html'"></div>
-
-    <div class="col-md-4 col-md-offset-4" ng-show="view.showform">
-      <form novalidate ng-submit="addPost()">
-        <div class="form-group">
-          <label for=""></label>
-          <input type="text" class="form-control">
-        </div>
-        <div class="form-group">
-          <label for=""></label>
-          <input type="text" class="form-control">
-        </div>
-        <div class="form-group">
-          <label for=""></label>
-          <input type="text" class="form-control">
-        </div>
-        <div class="form-group">
-          <label for=""></label>
-          <input type="text" class="form-control">
-        </div>         
-      </form>
-    </div>
-
-    <div class="col-md-10 col-md-offset-1" ng-repeat="post in posts">
-      <div class="jumbotron postSection">
-        <img ng-src="{{post.url}}">
-        <div class="postContent">
-          <h2>{{post.title}}</h2>
-          <hr>
-          <p>{{post.content}}</p>
-          <p>more</p>                              
-        </div>
-      </div>
-    </div>  
-
+    <div ng-include src="'./partials/newPost.html'"></div>
+    <div ng-include src="'./partials/allPost.html'"></div>  
   </div>
 
   <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
