--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-  <div ng-controller="postController">
+  <div ng-controller="PostController">
     <div ng-include src="'./partials/header.html'"></div>
     <div ng-include src="'./partials/newPost.html'"></div>
     <div ng-include src="'./partials/allPost.html'"></div>  
@@ -18,6 +18,7 @@
   <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.4/angular.min.js"></script>
+  <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.0/angular-messages.js"></script>
   <script type="text/javascript" src="./js/app.js"></script>
   <script type="text/javascript" src="./js/controller.js"></script>
 </body>
